remove margin preventing evidence modal y overflow from reaching edge of container

--- a/src/Components/Modals/EvidenceModal.module.scss
+++ b/src/Components/Modals/EvidenceModal.module.scss
@@ -20,6 +20,7 @@
     overflow-y: hidden;
     display: grid;
     align-content: flex-start;
+    margin: $xs auto 0;
   }
   .tab {
     display: grid;
